quoting-CypressTK1/force-app/main/default/objects/RateCardItemAttributeOption__c/RateCardItemAttributeOption__c.object-meta.xml
<CustomObject>
    <label>Rate Card Item Attribute Option</label>
    <nameField>
        <displayFormat>RCIAO-{00000}</displayFormat>
        <label>Rate Card Item Attribute Option</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Card Item Attribute Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>