quoting-CypressTK1/force-app/main/default/objects/RateCardItemAttributeOption__c/fields/AttributeOptionId__c.field-meta.xml
<CustomField>
    <fullName>AttributeOptionId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Attribute Option</label>
    <referenceTo>RateCardAttributeOption__c</referenceTo>
    <relationshipLabel>Rate Card Items Attribute Options</relationshipLabel>
    <relationshipName>RateCardItemAttributeOptions</relationshipName>
    <type>Lookup</type>
</CustomField>