quoting-CypressTK1/force-app/main/default/objects/RateCardItemAttributeOption__c/fields/RateCardItemAttributeKey__c.field-meta.xml
<CustomField>
    <fullName>RateCardItemAttributeKey__c</fullName>
    <externalId>true</externalId>
    <label>Rate Card Item Attribute Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>