quoting-CypressTK1/force-app/main/default/objects/RateCardItemAttributeOption__c/fields/RateCardItemId__c.field-meta.xml
<CustomField>
    <fullName>RateCardItemId__c</fullName>
    <label>Rate Card Item</label>
    <referenceTo>RateCardItem__c</referenceTo>
    <relationshipLabel>Rate Card Item Attribute Options</relationshipLabel>
    <relationshipName>RateCardItemAttributeOptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>